--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "more voluntering is accessable",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node_modules/.bin/nodemon app.js --exec babel-node --"
+    "start": "node dist/server.js",
+    "build": "babel src --out-dir dist --copy-files",
+    "dev": "node_modules/.bin/nodemon src/server.js --exec babel-node --",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Saud Almutairi",
   "license": "ISC",
@@ -20,9 +22,19 @@
     "pg": "^7.9.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^5.1.1",
-    "sequelize-cli": "^5.4.0"
+    "sequelize-cli": "^5.4.0",
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
+    "dotenv": "^7.0.0",
+    "morgan": "^1.9.1",
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
+  },
+  "engines": {
+    "node": "10.15.0",
+    "npm": "6.4.1"
   }
 }
